<resources>
    <string name="app_name">SmartPushUps</string>
    <string name="training">Training</string>
    <string name="progress">Fortschritte</string>
    <string name="smartball">Smartball</string>
    <string name="result">Trainingsergebnis</string>
    <string name="starten">Starten</string>
    <string name="save_sets_reps">\t\tSätze: %1$d\n\t\tWiderholungen: %2$d</string>
    <string name="start">Start</string>


    //TrainingActivity
    <string name="pushupTraining">PushUp Training</string>
    <string name="sets">Sätze:</string>
    <string name="reps">Wiederholungen:</string>
    <string name="emptyError">Füllen Sie zuerst alle Felder aus</string>


    //SmartballConnectActivity
    <string name="smartballTraining">Smartball Training</string>
    <string name="connect">Verbinden</string>
    <string name="bt_not_available">Bluetooth wird nicht unterstützt</string>
    <string name="stop_search"> Stoppe Suche</string>
    <string name="start_search"> Starte Suche</string>


    //PushupActivity
    <string name="light_available">Lichtsensor verfügbar</string>
    <string name="light_not_available">Lichtsensor nicht verfügbar</string>
    <string name="keepgoing">Weitermachen</string>
    <string name="stop">Beenden</string>
    <string name="pause">Pausieren</string>
    <string name="trainingpause">Training wurde pausiert\n\n</string>
    <string name="setsCount">Satz:\t%1$d</string>
    <string name="repsCount">Gesamt Wiederholungen:\t%1$d</string>
    <string name="start_sets">Satz: 0</string>
    <string name="start_reps">Gesamt Wiederholungen: 0</string>


    //ListActivity
    <string name="save">Speichern</string>
    <string name="training_counter">Training\n</string>
    <string name="delete_result">Ergebnis löschen</string>
    <string name="cancel">Abbrechen</string>
    <string name="delete">Löschen</string>
    <string name="last_activity">Letzte Aktivitäten:</string>
    
    
    //SmartballActivity
    <string name="connect_failed">Verbindung fehlgeschlagen</string>
    <string name="connect_success">Verbunden</string>
    <string name="connecting">Verbinden...</string>
    <string name="left">Links</string>
    <string name="right">Rechts</string>
    <string name="up">Oben</string>
    <string name="down">Unten</string>
</resources>