<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SmartballConnectActivity">

    <View
        android:id="@+id/viewSmartball2"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageSmartball2"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:background="@color/light_grey"
        app:layout_constraintStart_toStartOf="@+id/viewSmartball2"
        app:layout_constraintTop_toTopOf="@+id/viewSmartball2"
        app:srcCompat="@drawable/ic_smartball_24" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        android:text="@string/smartballTraining"
        android:textSize="25sp"
        app:layout_constraintStart_toEndOf="@+id/imageSmartball2"
        app:layout_constraintTop_toTopOf="@+id/viewSmartball2" />

    <android.widget.Button
        android:id="@+id/btnSearch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="25dp"
        android:background="@color/btn_orange"
        android:text="@string/start_search"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/viewSmartball2"
        app:layout_constraintEnd_toEndOf="@+id/viewSmartball2" />

    <ListView
        android:id="@+id/lvDevices"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/rounded_corners"
        app:layout_constraintBottom_toTopOf="@+id/dividerTrainig2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewSmartball2"
        app:layout_constraintVertical_bias="0.0" />

    <View
        android:id="@+id/dividerTrainig2"
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="75dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.widget.Button
        android:id="@+id/btnSmartballS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableTop="@drawable/ic_smartball_24"
        android:drawableTint="@color/orange"
        android:text="@string/smartball"
        android:textColor="@color/orange"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTrainig2" />

    <android.widget.Button
        android:id="@+id/btnListS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableTop="@drawable/ic_list_24"
        android:text="@string/progress"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnSmartballS"
        app:layout_constraintTop_toBottomOf="@+id/dividerTrainig2" />

    <android.widget.Button
        android:id="@+id/btnTrainingS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:drawableTop="@drawable/ic_training_24"
        android:text="@string/training"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnSmartballS"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerTrainig2" />

</androidx.constraintlayout.widget.ConstraintLayout>